--- a/result/2020-02-21 10_56_21_result.html
+++ b/result/2020-02-21 10_56_21_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 16:09:47</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:15.634896</p>
-<p class='attribute'><strong>状态:</strong> 通过 21 失败 2</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-21 10:56:21</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:54.908675</p>
+<p class='attribute'><strong>状态:</strong> 通过 19 失败 3 错误 1</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -211,55 +211,96 @@
             <td>查看</td>
         </tr>
         
-    <tr class='passClass'>
-        <td>case.case_children_choose.ChildrenChooseTest</td>
-        <td>4</td>
-        <td>4</td>
-        <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c1',4)">详情</a></td>
+    <tr class='errorClass'>
+        <td>case.case_children_info.ChildrenInfoTest</td>
+        <td>8</td>
+        <td>6</td>
+        <td>1</td>
+        <td>1</td>
+        <td><a href="javascript:showClassDetail('c1',8)">详情</a></td>
     </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_choose</div></td>
+    <td class='none'><div class='testcase'>test_and_record_crrent_step_no</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt1.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_choose_nobody</div></td>
-    <td colspan='5' align='center'>通过</td>
+<tr id='ft1.2' class='none'>
+    <td class='errorCase'><div class='testcase'>test_edit_child_info_by_id</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.2')" >
+        错误</a>
+    <div id='div_ft1.2' class="popup_window">
+        <pre>ft1.2: Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 50, in test_edit_child_info_by_id
+    r = self.rs.post(self.childInfoApi, data=para)
+AttributeError: 'ChildrenInfoTest' object has no attribute 'childInfoApi'
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
 </tr>
 
 <tr id='pt1.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_list</div></td>
+    <td class='none'><div class='testcase'>test_get_child_info_by_correct_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_list_by_parent_id</div></td>
+    <td class='none'><div class='testcase'>test_get_child_info_by_invalid_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt1.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_get_child_list_by_correct_family_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt1.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_get_child_list_by_invalid_family_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='ft1.7' class='none'>
+    <td class='failCase'><div class='testcase'>test_next_step_with_correct_id</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.7')" >
+        失败</a>
+    <div id='div_ft1.7' class="popup_window">
+        <pre>ft1.7: Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 68, in test_next_step_with_correct_id
+    self.assertTrue(rj == "success")
+AssertionError: False is not true
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt1.8' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_next_step_with_invalid_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
     <tr class='failClass'>
-        <td>case.case_children_info.ChildrenInfoTest</td>
-        <td>5</td>
-        <td>3</td>
+        <td>case.case_login.LoginTest</td>
+        <td>8</td>
+        <td>6</td>
         <td>2</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c2',5)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c2',8)">详情</a></td>
     </tr>
 
-<tr id='ft2.1' class='none'>
-    <td class='failCase'><div class='testcase'>test_edit_child_info_by_id</div></td>
+<tr id='pt2.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.1')" >
-        失败</a>
-    <div id='div_ft2.1' class="popup_window">
-        <pre>ft2.1: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 35, in test_edit_child_info_by_id
-    self.assertTrue(rj == "success")
-AssertionError: False is not true
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.1')" >
+        通过</a>
+    <div id='div_pt2.1' class="popup_window">
+        <pre>pt2.1: 测试用例执行完之后的收尾操作=====
 </pre>
     </div>
     <!--css div popup end-->
@@ -267,20 +308,44 @@ AssertionError: False is not true
 </tr>
 
 <tr id='pt2.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_info_confirm</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-<tr id='ft2.3' class='none'>
-    <td class='failCase'><div class='testcase'>test_next_step_with_correct_id</div></td>
+    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.3')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.2')" >
+        通过</a>
+    <div id='div_pt2.2' class="popup_window">
+        <pre>pt2.2: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.3' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.3')" >
+        通过</a>
+    <div id='div_pt2.3' class="popup_window">
+        <pre>pt2.3: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='ft2.4' class='none'>
+    <td class='failCase'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.4')" >
         失败</a>
-    <div id='div_ft2.3' class="popup_window">
-        <pre>ft2.3: Traceback (most recent call last):
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 53, in test_next_step_with_correct_id
-    self.assertTrue(rj == "success")
+    <div id='div_ft2.4' class="popup_window">
+        <pre>ft2.4: 测试用例执行完之后的收尾操作=====
+Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_login.py", line 46, in test_read_policy_with_invaild_param
+    self.assertTrue(rj == 'error')
 AssertionError: False is not true
 </pre>
     </div>
@@ -288,187 +353,60 @@ AssertionError: False is not true
     </td>
 </tr>
 
-<tr id='pt2.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_next_step_with_invalid_id</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
 <tr id='pt2.5' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_parents_fill_edit</div></td>
-    <td colspan='5' align='center'>通过</td>
-</tr>
-
-    <tr class='passClass'>
-        <td>case.case_login.LoginTest</td>
-        <td>12</td>
-        <td>12</td>
-        <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c3',12)">详情</a></td>
-    </tr>
-
-<tr id='pt3.1' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.1')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.5')" >
         通过</a>
-    <div id='div_pt3.1' class="popup_window">
-        <pre>pt3.1: 测试用例执行完之后的收尾操作=====
+    <div id='div_pt2.5' class="popup_window">
+        <pre>pt2.5: 测试用例执行完之后的收尾操作=====
 </pre>
     </div>
     <!--css div popup end-->
     </td>
 </tr>
 
-<tr id='pt3.2' class='hiddenRow'>
+<tr id='pt2.6' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.2')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.6')" >
         通过</a>
-    <div id='div_pt3.2' class="popup_window">
-        <pre>pt3.2: 测试用例执行完之后的收尾操作=====
+    <div id='div_pt2.6' class="popup_window">
+        <pre>pt2.6: 测试用例执行完之后的收尾操作=====
 </pre>
     </div>
     <!--css div popup end-->
     </td>
 </tr>
 
-<tr id='pt3.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.3')" >
-        通过</a>
-    <div id='div_pt3.3' class="popup_window">
-        <pre>pt3.3: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.4' class='hiddenRow'>
+<tr id='pt2.7' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.4')" >
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.7')" >
         通过</a>
-    <div id='div_pt3.4' class="popup_window">
-        <pre>pt3.4: 测试用例执行完之后的收尾操作=====
+    <div id='div_pt2.7' class="popup_window">
+        <pre>pt2.7: 测试用例执行完之后的收尾操作=====
 </pre>
     </div>
     <!--css div popup end-->
     </td>
 </tr>
 
-<tr id='pt3.5' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+<tr id='ft2.8' class='none'>
+    <td class='failCase'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.5')" >
-        通过</a>
-    <div id='div_pt3.5' class="popup_window">
-        <pre>pt3.5: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.6' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.6')" >
-        通过</a>
-    <div id='div_pt3.6' class="popup_window">
-        <pre>pt3.6: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.7' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.7')" >
-        通过</a>
-    <div id='div_pt3.7' class="popup_window">
-        <pre>pt3.7: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.8' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.8')" >
-        通过</a>
-    <div id='div_pt3.8' class="popup_window">
-        <pre>pt3.8: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.9' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.9')" >
-        通过</a>
-    <div id='div_pt3.9' class="popup_window">
-        <pre>pt3.9: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.10' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.10')" >
-        通过</a>
-    <div id='div_pt3.10' class="popup_window">
-        <pre>pt3.10: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.11' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.11')" >
-        通过</a>
-    <div id='div_pt3.11' class="popup_window">
-        <pre>pt3.11: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt3.12' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt3.12')" >
-        通过</a>
-    <div id='div_pt3.12' class="popup_window">
-        <pre>pt3.12: 测试用例执行完之后的收尾操作=====
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.8')" >
+        失败</a>
+    <div id='div_ft2.8' class="popup_window">
+        <pre>ft2.8: 测试用例执行完之后的收尾操作=====
+Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_login.py", line 46, in test_read_policy_with_invaild_param
+    self.assertTrue(rj == 'error')
+AssertionError: False is not true
 </pre>
     </div>
     <!--css div popup end-->
@@ -481,25 +419,59 @@ AssertionError: False is not true
         <td>2</td>
         <td>0</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c4',2)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c3',2)">详情</a></td>
     </tr>
 
-<tr id='pt4.1' class='hiddenRow'>
+<tr id='pt3.1' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-<tr id='pt4.2' class='hiddenRow'>
+<tr id='pt3.2' class='hiddenRow'>
     <td class='none'><div class='testcase'>test_garten_list_by_address_Id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+    <tr class='passClass'>
+        <td>case.case_parent_info.ParentInfoTest</td>
+        <td>5</td>
+        <td>5</td>
+        <td>0</td>
+        <td>0</td>
+        <td><a href="javascript:showClassDetail('c4',5)">详情</a></td>
+    </tr>
+
+<tr id='pt4.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_edit_parent_info</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt4.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_search_parnet_list_by_invalid_parent_Id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt4.3' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_search_single_parent_by_correct_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt4.4' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_search_single_parent_by_invalid_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='pt4.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_serach_parent_list_by_correct_parent_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
         <tr id='total_row'>
             <td>总计</td>
             <td>23</td>
-            <td>21</td>
-            <td>2</td>
-            <td>0</td>
+            <td>19</td>
+            <td>3</td>
+            <td>1</td>
             <td>&nbsp;</td>
         </tr>
     </table>
@@ -532,9 +504,9 @@ AssertionError: False is not true
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:21, name:'通过'},
-                        {value:2, name:'失败'},
-                        {value:0, name:'错误'}
+                        {value:19, name:'通过'},
+                        {value:3, name:'失败'},
+                        {value:1, name:'错误'}
                     ],
                     itemStyle: {
                         emphasis: {
