--- a/result/2020-02-21 11_00_03_result.html
+++ b/result/2020-02-21 11_00_03_result.html
@@ -178,9 +178,9 @@
         
     <div class='page-header'>
         <h1>report</h1>
-    <p class='attribute'><strong>开始时间:</strong> 2020-02-20 16:16:46</p>
-<p class='attribute'><strong>运行时长:</strong> 0:00:00.343175</p>
-<p class='attribute'><strong>状态:</strong> 通过 12 错误 1</p>
+    <p class='attribute'><strong>开始时间:</strong> 2020-02-21 11:00:03</p>
+<p class='attribute'><strong>运行时长:</strong> 0:00:48.124045</p>
+<p class='attribute'><strong>状态:</strong> 通过 20 失败 3</p>
 
     </div>
     <div style="float: left;width:50%;"><p class='description'></p></div>
@@ -211,63 +211,190 @@
             <td>查看</td>
         </tr>
         
-    <tr class='passClass'>
-        <td>case.case_children_choose.ChildrenChooseTest</td>
-        <td>4</td>
-        <td>4</td>
+    <tr class='failClass'>
+        <td>case.case_children_info.ChildrenInfoTest</td>
+        <td>8</td>
+        <td>7</td>
+        <td>1</td>
         <td>0</td>
-        <td>0</td>
-        <td><a href="javascript:showClassDetail('c1',4)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c1',8)">详情</a></td>
     </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_choose</div></td>
+    <td class='none'><div class='testcase'>test_and_record_crrent_step_no</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_choose_nobody</div></td>
+    <td class='none'><div class='testcase'>test_edit_child_info_by_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_list</div></td>
+    <td class='none'><div class='testcase'>test_get_child_info_by_correct_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt1.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_children_list_by_parent_id</div></td>
+    <td class='none'><div class='testcase'>test_get_child_info_by_invalid_id</div></td>
     <td colspan='5' align='center'>通过</td>
 </tr>
 
-    <tr class='errorClass'>
-        <td>unittest.loader._FailedTest</td>
-        <td>1</td>
-        <td>0</td>
-        <td>0</td>
-        <td>1</td>
-        <td><a href="javascript:showClassDetail('c2',1)">详情</a></td>
-    </tr>
+<tr id='pt1.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_get_child_list_by_correct_family_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
 
-<tr id='ft2.1' class='none'>
-    <td class='errorCase'><div class='testcase'>case_children_info</div></td>
+<tr id='pt1.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_get_child_list_by_invalid_family_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+<tr id='ft1.7' class='none'>
+    <td class='failCase'><div class='testcase'>test_next_step_with_correct_id</div></td>
     <td colspan='5' align='center'>
     <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.1')" >
-        错误</a>
-    <div id='div_ft2.1' class="popup_window">
-        <pre>ft2.1: ImportError: Failed to import test module: case.case_children_info
-Traceback (most recent call last):
-  File "D:\software\install\vs2017\Shared\Python36_64\lib\unittest\loader.py", line 428, in _find_test_path
-    module = self._get_module_from_name(name)
-  File "D:\software\install\vs2017\Shared\Python36_64\lib\unittest\loader.py", line 369, in _get_module_from_name
-    __import__(name)
-  File "E:\projects\Python\test\kindergarten_pudong\case\case_children_info.py", line 13, in &lt;module&gt;
-    from util import ObjectEncoder
-  File "E:\projects\Python\test\kindergarten_pudong\util\ObjectEncoder.py", line 10, in &lt;module&gt;
-    import numpy as np
-ModuleNotFoundError: No module named 'numpy'
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft1.7')" >
+        失败</a>
+    <div id='div_ft1.7' class="popup_window">
+        <pre>ft1.7: Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_children_info.py", line 68, in test_next_step_with_correct_id
+    self.assertTrue(rj == "success")
+AssertionError: False is not true
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
 
+<tr id='pt1.8' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_next_step_with_invalid_id</div></td>
+    <td colspan='5' align='center'>通过</td>
+</tr>
+
+    <tr class='failClass'>
+        <td>case.case_login.LoginTest</td>
+        <td>8</td>
+        <td>6</td>
+        <td>2</td>
+        <td>0</td>
+        <td><a href="javascript:showClassDetail('c2',8)">详情</a></td>
+    </tr>
+
+<tr id='pt2.1' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.1')" >
+        通过</a>
+    <div id='div_pt2.1' class="popup_window">
+        <pre>pt2.1: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.2')" >
+        通过</a>
+    <div id='div_pt2.2' class="popup_window">
+        <pre>pt2.2: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.3' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.3')" >
+        通过</a>
+    <div id='div_pt2.3' class="popup_window">
+        <pre>pt2.3: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='ft2.4' class='none'>
+    <td class='failCase'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.4')" >
+        失败</a>
+    <div id='div_ft2.4' class="popup_window">
+        <pre>ft2.4: 测试用例执行完之后的收尾操作=====
+Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_login.py", line 46, in test_read_policy_with_invaild_param
+    self.assertTrue(rj == 'error')
+AssertionError: False is not true
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.5' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.5')" >
+        通过</a>
+    <div id='div_pt2.5' class="popup_window">
+        <pre>pt2.5: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.6' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.6')" >
+        通过</a>
+    <div id='div_pt2.6' class="popup_window">
+        <pre>pt2.6: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='pt2.7' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt2.7')" >
+        通过</a>
+    <div id='div_pt2.7' class="popup_window">
+        <pre>pt2.7: 测试用例执行完之后的收尾操作=====
+</pre>
+    </div>
+    <!--css div popup end-->
+    </td>
+</tr>
+
+<tr id='ft2.8' class='none'>
+    <td class='failCase'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
+    <td colspan='5' align='center'>
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_ft2.8')" >
+        失败</a>
+    <div id='div_ft2.8' class="popup_window">
+        <pre>ft2.8: 测试用例执行完之后的收尾操作=====
+Traceback (most recent call last):
+  File "C:\project\教软公司项目\浦东幼儿园\kindergarten_pudong\kindergarten_pudong\case\case_login.py", line 46, in test_read_policy_with_invaild_param
+    self.assertTrue(rj == 'error')
+AssertionError: False is not true
 </pre>
     </div>
     <!--css div popup end-->
@@ -294,104 +421,45 @@ ModuleNotFoundError: No module named 'numpy'
 </tr>
 
     <tr class='passClass'>
-        <td>case.case_login.LoginTest</td>
-        <td>6</td>
-        <td>6</td>
+        <td>case.case_parent_info.ParentInfoTest</td>
+        <td>5</td>
+        <td>5</td>
         <td>0</td>
         <td>0</td>
-        <td><a href="javascript:showClassDetail('c4',6)">详情</a></td>
+        <td><a href="javascript:showClassDetail('c4',5)">详情</a></td>
     </tr>
 
 <tr id='pt4.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_child_login_with_correct_account</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.1')" >
-        通过</a>
-    <div id='div_pt4.1' class="popup_window">
-        <pre>pt4.1: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+    <td class='none'><div class='testcase'>test_edit_parent_info</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt4.2' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login_with_invaild_phone_and_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.2')" >
-        通过</a>
-    <div id='div_pt4.2' class="popup_window">
-        <pre>pt4.2: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+    <td class='none'><div class='testcase'>test_search_parnet_list_by_invalid_parent_Id</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt4.3' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_phone_number_identification</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.3')" >
-        通过</a>
-    <div id='div_pt4.3' class="popup_window">
-        <pre>pt4.3: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+    <td class='none'><div class='testcase'>test_search_single_parent_by_correct_id</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt4.4' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_correct_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.4')" >
-        通过</a>
-    <div id='div_pt4.4' class="popup_window">
-        <pre>pt4.4: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+    <td class='none'><div class='testcase'>test_search_single_parent_by_invalid_id</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
 <tr id='pt4.5' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_read_policy_with_invaild_param</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.5')" >
-        通过</a>
-    <div id='div_pt4.5' class="popup_window">
-        <pre>pt4.5: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
-</tr>
-
-<tr id='pt4.6' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_validation_code</div></td>
-    <td colspan='5' align='center'>
-    <!--css div popup start-->
-    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt4.6')" >
-        通过</a>
-    <div id='div_pt4.6' class="popup_window">
-        <pre>pt4.6: 测试用例执行完之后的收尾操作=====
-</pre>
-    </div>
-    <!--css div popup end-->
-    </td>
+    <td class='none'><div class='testcase'>test_serach_parent_list_by_correct_parent_id</div></td>
+    <td colspan='5' align='center'>通过</td>
 </tr>
 
         <tr id='total_row'>
             <td>总计</td>
-            <td>13</td>
-            <td>12</td>
+            <td>23</td>
+            <td>20</td>
+            <td>3</td>
             <td>0</td>
-            <td>1</td>
             <td>&nbsp;</td>
         </tr>
     </table>
@@ -424,9 +492,9 @@ ModuleNotFoundError: No module named 'numpy'
                     radius : '60%',
                     center: ['50%', '60%'],
                     data:[
-                        {value:12, name:'通过'},
-                        {value:0, name:'失败'},
-                        {value:1, name:'错误'}
+                        {value:20, name:'通过'},
+                        {value:3, name:'失败'},
+                        {value:0, name:'错误'}
                     ],
                     itemStyle: {
                         emphasis: {
